artifact in R objects; functional anlysis; light config files

--- a/REFERENCES.bib
+++ b/REFERENCES.bib
@@ -100,3 +100,9 @@
   pages = {587},
 }
 
+@Manual{cnima,
+  title = {{CopyNeutralIMA: Genomic Copy Neutral samples for Illumina Methylation arrays}},
+  author = {Moritz Przybilla and Xavier Pastor},
+  year = {2018},
+  url = "https://bioconductor.org/packages/CopyNeutralIMA"
+}
