--- a/REFERENCES.bib
+++ b/REFERENCES.bib
@@ -106,3 +106,11 @@
   year = {2018},
   url = "https://bioconductor.org/packages/CopyNeutralIMA"
 }
+
+@Article{missMethyl,
+  author = {Belinda Phipson and Jovana Maksimovic and Alicia Oshlack},
+  title = {missMethyl: an R package for analysing methylation data from Illuminas HumanMethylation450 platform},
+  journal = {Bioinformatics},
+  pages = {btv560},
+  year = {2015},
+}
