--- a/REFERENCES.bib
+++ b/REFERENCES.bib
@@ -1,15 +1,3 @@
-@Article{minfi,
-  title = {{Minfi: A flexible and comprehensive Bioconductor package for the analysis of Infinium DNA Methylation microarrays}},
-  author = {Martin J. Aryee and Andrew E. Jaffe and Hector Corrada-Bravo and Christine Ladd-Acosta and Andrew P. Feinberg and Kasper D. Hansen and Rafael A. Irizarry},
-  year = {2014},
-  journal = {Bioinformatics},
-  volume = {30},
-  number = {10},
-  pages = {1363--1369},
-  doi = {10.1093/bioinformatics/btu049},
-  pubmed = {24478339},
-}
-
 @Article{450k,
   author = {Yi-an Chen and Mathieu Lemire and Sanaa Choufani and Darci T. Butcher and Daria Grafodatskayak and Brent W. Zanke and Steven Gallinger and Thomas J. Hudson and Rosanna Weksberg},
   title = {Discovery of cross-reactive probes and polymorphic CpGs in the Illumina Infinium Human Methylation450 microarray.},
@@ -29,30 +17,6 @@
   pages = {22-24},
 }
 
-@Article{ENmix,
-  title = {ENmix: a novel background correction method for Illumina HumanMethylation450 BeadChip},
-  author = {Zongli Xu and Liang Niu and Leping Li and Jack,A. Taylor},
-  year = {2016},
-  journal = {Nucleic Acids Research},
-  pubmed = {26384415},
-}
-
-@Article{RELIC,
-  author = {Zongli Xu and Jack,A. Taylor and Sabine,A.S. Langie and Patrick,De Boever and Liang Niu},
-  title = {RELIC: a novel dye-bias correction method for Illumina Methylation BeadChip},
-  journal = {BMC Genomics},
-  year = {2017},
-  pubmed = {28049437},
-}
-
-@Article{RCP,
-  author = {Liang Niu and Zongli Xu and Jack,A. Taylor},
-  title = {RCP: a novel probe design bias correction method for Illumina Methylation BeadChip},
-  journal = {Bioinformatics},
-  year = {2016},
-  pubmed = {27153672},
-}
-
 @Manual{conumee,
   title = {conumee: Enhanced copy-number variation analysis using Illumina DNA methylation
     arrays},
@@ -60,26 +24,6 @@
   address = {Division of Molecular Genetics, German Cancer Research Center (DKFZ), Heidelberg, Germany},
   note = {R package version 1.9.0},
   url = {http://bioconductor.org/packages/conumee/},
-}
-
-@Article{limma,
-  author = {Matthew E Ritchie and Belinda Phipson and Di Wu and Yifang Hu and Charity W Law and Wei Shi and Gordon K Smyth},
-  title = {{limma} powers differential expression analyses for {RNA}-sequencing and microarray studies},
-  journal = {Nucleic Acids Research},
-  year = {2015},
-  volume = {43},
-  number = {7},
-  pages = {e47},
-}
-
-@Article{dmr,
-  author = {Timothy J Peters and Michael J Buckley and Aaron L Statham and Ruth Pidsley and Katherine Samaras and Reginald V Lord and Susan J Clark and Peter L Molloy},
-  title = {De novo identification of differentially methylated regions in the human genome},
-  journal = {Epigenetics & Chromatin},
-  year = {2015},
-  volume = {8},
-  pages = {6},
-  url = {http://www.epigeneticsandchromatin.com/content/8/1/6},
 }
 
 @Article{fdr,
@@ -100,14 +44,165 @@
   pages = {587},
 }
 
-@Manual{cnima,
+@Article{minfi,
+  title = {{Minfi: A flexible and comprehensive Bioconductor package for the analysis of Infinium DNA Methylation microarrays}},
+  author = {Martin J. Aryee and Andrew E. Jaffe and Hector Corrada-Bravo and Christine Ladd-Acosta and Andrew P. Feinberg and Kasper D. Hansen and Rafael A. Irizarry},
+  year = {2014},
+  journal = {Bioinformatics},
+  volume = {30},
+  number = {10},
+  pages = {1363--1369},
+  doi = {10.1093/bioinformatics/btu049},
+  pubmed = {24478339},
+}
+
+@Article{SWAN,
+  author = {Jovana Maksimovic and Lavinia Gordon and Alicia Oshlack},
+  title = {{SWAN: Subset quantile Within-Array Normalization for Illumina Infinium HumanMethylation450 BeadChips}},
+  journal = {Genome Biology},
+  year = {2012},
+  volume = {13},
+  number = {6},
+  pages = {R44},
+  doi = {10.1186/gb-2012-13-6-r44},
+  pubmed = {22703947},
+}
+
+@Article{funnorm,
+  author = {Jean-Philippe Fortin and Aurelie Labbe and Mathieu Lemire and Brent W. Zanke and Thomas J. Hudson and Elana J. Fertig and Celia M.T. Greenwood and Kasper D. Hansen},
+  title = {Functional normalization of 450k methylation array data improves replication in large cancer studies},
+  journal = {Genome Biology},
+  year = {2014},
+  volume = {15},
+  number = {12},
+  pages = {503},
+  doi = {10.1186/s13059-014-0503-2},
+  pubmed = {25517394},
+}
+
+@Article{noob,
+  author = {Timothy J. Triche and Daniel J. Weisenberger and David {Van Den Berg} and Peter W. Laird and Kimberly D. Siegmund},
+  title = {Low-level processing of {Illumina} {Infinium} {DNA} {Methylation} {BeadArrays}},
+  journal = {Nucleic Acids Research},
+  year = {2013},
+  volume = {41},
+  number = {7},
+  pages = {e90},
+  doi = {10.1093/nar/gkt090},
+  pubmed = {23476028},
+}
+
+@Article{compartments,
+  author = {Jean-Philippe Fortin and Kasper D. Hansen},
+  title = {Reconstructing A/B compartments as revealed by Hi-C using long-range correlations in epigenetic data},
+  journal = {Genome Biology},
+  year = {2015},
+  volume = {16},
+  pages = {180},
+  doi = {10.1186/s13059-015-0741-y},
+  pubmed = {26316348},
+}
+
+@Article{gaphunter,
+  author = {Shan V. Andrews and Christine Ladd-Acosta and Andrew P. Feinberg and Kasper D. Hansen and M. Daniele Fallin},
+  title = {'Gap hunting' to characterize clustered probe signals in Illumina methylation array data},
+  journal = {Epigenetics & Chromatin},
+  year = {2016},
+  volume = {9},
+  pages = {56},
+  doi = {10.1186/s13072-016-0107-z},
+  pubmed = {27980682},
+}
+
+@Article{minfiEpic,
+  author = {Jean-Philippe Fortin and Timothy J. Triche and Kasper D. Hansen},
+  title = {Preprocessing, normalization and integration of the Illumina HumanMethylationEPIC array with minfi},
+  journal = {Bioinformatics},
+  year = {2017},
+  volume = {33},
+  number = {4},
+  page = {558-560},
+  doi = {10.1093/bioinformatics/btw691},
+}
+
+@Article{ENmix,
+  title = {ENmix: a novel background correction method for Illumina HumanMethylation450 BeadChip},
+  author = {Zongli Xu and Liang Niu and Leping Li and Jack,A. Taylor},
+  year = {2016},
+  journal = {Nucleic Acids Research},
+  pubmed = {26384415},
+}
+
+@Article{RCP,
+  author = {Liang Niu and Zongli Xu and Jack,A. Taylor},
+  title = {RCP: a novel probe design bias correction method for Illumina Methylation BeadChip},
+  journal = {Bioinformatics},
+  year = {2016},
+  pubmed = {27153672},
+}
+
+@Article{oxBS-MLE,
+  author = {Zongli Xu and Jack,A. Taylor and Yuet-Kin Leung and Shuk-Mei Ho and Liang Niu},
+  title = {oxBS-MLE: An efficient method to estimate 5-methylcytosine and 5-hydroxymethylcytosine in paired bisulfite and oxidative bisulfite treated DNA},
+  journal = {Bioinformatics},
+  year = {2016},
+  pubmed = {27522082},
+}
+
+@Article{RELIC,
+  author = {Zongli Xu and Jack,A. Taylor and Sabine,A.S. Langie and Patrick,De Boever and Liang Niu},
+  title = {RELIC: a novel dye-bias correction method for Illumina Methylation BeadChip},
+  journal = {BMC Genomics},
+  year = {2017},
+  pubmed = {28049437},
+}
+
+@Article{limma,
+  author = {Matthew E Ritchie and Belinda Phipson and Di Wu and Yifang Hu and Charity W Law and Wei Shi and Gordon K Smyth},
+  title = {{limma} powers differential expression analyses for {RNA}-sequencing and microarray studies},
+  journal = {Nucleic Acids Research},
+  year = {2015},
+  volume = {43},
+  number = {7},
+  pages = {e47},
+}
+
+@Article{DMRcate,
+  author = {Timothy J Peters and Michael J Buckley and Aaron L Statham and Ruth Pidsley and Katherine Samaras and Reginald V Lord and Susan J Clark and Peter L Molloy},
+  title = {De novo identification of differentially methylated regions in the human genome},
+  journal = {Epigenetics & Chromatin},
+  year = {2015},
+  volume = {8},
+  pages = {6},
+  url = {http://www.epigeneticsandchromatin.com/content/8/1/6},
+}
+
+@Manual{CopyNeutralIMA,
   title = {{CopyNeutralIMA: Genomic Copy Neutral samples for Illumina Methylation arrays}},
   author = {Moritz Przybilla and Xavier Pastor},
   year = {2018},
-  url = "https://bioconductor.org/packages/CopyNeutralIMA"
+  url = {https://bioconductor.org/packages/CopyNeutralIMA},
 }
 
-@Article{missMethyl,
+@Article{DiffVar,
+  author = {Belinda Phipson and Alicia Oshlack},
+  title = {DiffVar: A new method for detecting differential variability with application to methylation in cancer and aging},
+  journal = {Genome Biology},
+  volume = {15},
+  number = {9},
+  pages = {465},
+  year = {2014},
+}
+
+@Article{missMethyl1,
+  author = {Jovana Maksimovic and Johann A Gagnon-Bartsch and Terence P Speed and Alicia Oshlack},
+  title = {Removing unwanted variation in a differential methylation analysis of Illumina HumanMethylation450 array data},
+  journal = {Nucleic acids research},
+  pages = {gkv526},
+  year = {2015},
+}
+
+@Article{missMethyl2,
   author = {Belinda Phipson and Jovana Maksimovic and Alicia Oshlack},
   title = {missMethyl: an R package for analysing methylation data from Illuminas HumanMethylation450 platform},
   journal = {Bioinformatics},
